--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 		}
     </style>
 	
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EL19EJL0TD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EL19EJL0TD');
+</script>
 
 </head> 
  
